crates/puffin_hir/src/resolver/snapshots/puffin_hir__resolver__tests__func_with_param.snap
---
source: crates/puffin_hir/src/resolver/tests.rs
expression: standard_test(src)
---
[[ {
let c = a + b
} ]]
    [[ let c = a + b ]]
    c => "Concrete(Int)" from {
      { a + b } => "FunctionType { Concrete(Int), Concrete(Int), ret: Concrete(Int) }"
        { a } => Ident(Ident { name: "a" })
        { b } => Ident(Ident { name: "b" })
    }

